Bug 273614 - search option match case is not applied immediately
Summary: search option match case is not applied immediately
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-19 08:44 UTC by Victor Varvaryuk
Modified: 2011-09-14 03:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
'Match case' is checked, but highlight it showing old search results (case ignore) (78.39 KB, image/png)
2011-05-19 08:45 UTC, Victor Varvaryuk
Details
apply the match case immediately (1.69 KB, patch)
2011-09-13 22:28 UTC, Francesco Cecconi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Varvaryuk 2011-05-19 08:44:16 UTC
Version:           2.6.1 (using KDE 4.6.2) 
OS:                Linux

If I search for a text and then check 'Match case" - the settings is not applied immediately. I must press Next or Previous.

Reproducible: Always
Comment 1 Victor Varvaryuk 2011-05-19 08:45:17 UTC
Created attachment 60142 [details]
'Match case' is checked, but highlight it showing old search results (case ignore)
Comment 2 Francesco Cecconi 2011-09-13 22:28:13 UTC
Created attachment 63633 [details]
apply the match case immediately

Hi,

this patch applies the match case immediately when "Match case" checkbox is checked.

Best Regards
Comment 3 Kurt Hindenburg 2011-09-14 03:45:05 UTC
Git commit 050819bb8d1731c3a597183db8dd098b678592bb by Kurt Hindenburg.
Committed on 14/09/2011 at 05:39.
Pushed by hindenburg into branch 'master'.

When searching, apply change in case sensitive option immediately.

Patch by Francesco Cecconi <francesco.cecconi@kdemail.net>

BUG: 273614

M  +10   -0    src/SessionController.cpp
M  +1    -0    src/SessionController.h

http://commits.kde.org/konsole/050819bb8d1731c3a597183db8dd098b678592bb