When searching, apply change in case sensitive option immediately.

Patch by Francesco Cecconi <francesco.cecconi@kdemail.net>

BUG: 273614